<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp">

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et_email"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et_pw"
            android:hint="@string/et_pw"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_label_login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>