<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_register_ava"
                android:layout_width="140dp"
                android:layout_height="150dp"
                app:civ_border_color="@android:color/holo_red_dark"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_register_ava"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:text="@string/btn_register_select_photo"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:cornerRadius="75dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et_name"
            android:hint="@string/et_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et_email"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_register_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et_pw"
            android:hint="@string/et_pw"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>